# kfac-tutorial

./: .conda_env.yml  .envrc  .gitignore  LICENSE  README.md  black.toml  makefile  setup.cfg  setup.py
.github/workflows/: latex.yaml
kfs/: __init__.py  backpropagate_vectors_input_only.py  flattening.py  ggn_product.py  ggn_rosenbrock.py  ggns.py  ggns_linear_regression.py  hello_world.py  hessian_ce_loss.py  hessian_factorizations.py  hessian_mse_loss.py  hessian_product.py  hessians.py  jacobian_products.py  jacobians.py  jacobians_linear_layer.py  jacobians_shared_linear_layer.py  kfac.py  kfac_backpropagated_vectors.py  kfac_expand_Linear.py  kfac_linear.py  label_sampling.py  linearization.py  reduction_factors.py  test_kfac_expand_deep_linear_regression.py  test_kfac_expand_input_only_last_layer_regression.py  utils.py
kfs/basics/: __init__.py  emp_fisher_product.py  emp_fishers.py  flattening.py  forward_pass.py  ggn_product.py  ggn_rosenbrock.py  ggns.py  ggns_linear_regression.py  hessian_ce_loss.py  hessian_factorizations.py  hessian_mse_loss.py  hessian_product.py  hessians.py  jacobians.py  jacobians_linear_layer.py  jacobians_shared_linear_layer.py  label_sampling.py  linearization.py  mc_fisher_product.py  mc_fishers.py  mc_fishers_quick.py  reduction_factors.py
kfs/kfac/: __init__.py  backpropagated_vectors.py  expand_ConvNd.py  expand_Linear.py  reduce_ConvNd.py  reduce_Linear.py  scaffold.py
kfs/kfac_tests/: __init__.py  deep_linear_net.py  deep_linear_regression.py  expand_deep_linear_regression.py  expand_mlp_batch_size_1.py  input_only_last_layer_regression.py  mixed_deep_linear_regression.py  mlp_batch_size_1.py  reduce_deep_linear_regression.py  reduce_shallow_cnn.py
kfs/plots/: __init__.py  linearized_rosenbrock.py  synthetic_fisher.py  synthetic_hessian.py  synthetic_kfac.py
kfs/subfolder/: hello.py
test/: __init__.py  test_dummy.py  test_execute_code_blocks.py  test_fisher_mc.py  test_run_snippets.py
tex/: build.sh  execute_code_blocks.py  icml2024.sty  main.tex  references.bib
tex/appendix/: loss_function_hessians.tex
tex/figures/: reading_guide.tex
tex/preamble/: custom.tex  custom_early.tex  goodfellow.tex  icml.tex  metadata.tex
tex/sections/: basics.tex  basics_dl_emp_fisher.tex  basics_dl_fisher.tex  basics_dl_ggn.tex  basics_dl_hessian.tex  basics_empirical_risk.tex  basics_flattening.tex  basics_hessians.tex  basics_jacobians.tex  basics_linearization.tex  basics_neural_networks.tex  basics_probabilistic_interpretation.tex  cheatsheet_basics.tex  cheatsheet_kfac.tex  frontpage.tex  kfac_linear.tex  kfac_linear_expand.tex  kfac_linear_reduce.tex  kfac_overview.tex  kfac_remainder.tex  new_kfac_overview.tex  outlook.tex  partial_linearization.tex  preface.tex  reading_guide.tex  references.tex
